# swoops-webapp

./: .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.js  Makefile  README.md  docker-compose.local.yml  package-lock.json  package.json
backend/: .env.docker.example  Dockerfile.app.local  Dockerfile.celery.local  build-web.sh  build-worker.sh  conftest.py  docker_entrypoint.sh  lint.py  manage.py  pyproject.toml  pytest.ini  swagger.json
backend/accounts/: admin.py  backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py  0003_alter_user_wallet_address.py  0004_user_reveal_games_by_default.py  0005_tutorial_user_tutorial.py  (+5 more)
backend/api/: admin.py  exception_handlers.py  urls.py  views.py
backend/comm/: apps.py  email.py  handlers.py  notification.py
backend/eth/: admin.py  apps.py  contract.py  gas.py  models.py  serializers.py  service.py  signals.py  sync.py  tasks.py  urls.py  views.py
backend/game/: admin.py  apps.py  check_balance.py  converters.py  filters.py  forms.py  games.py  mappers.py  models.py  payout.py  payout_confirmation.py  permissions.py  players.py  processing.py  serializers.py  signals.py  tasks.py  throttling.py  urls.py  utils.py  views.py
backend/moderation/: admin.py  apps.py  models.py  processing.py  serializers.py  service.py  signals.py  tasks.py  urls.py  views.py
backend/services/: crypto_currency_converter.py  imgix_helper.py  opensea.py  s3_helper.py  swoops_factory_client.py
backend/signals/: signals.py
backend/simulator/: admin.py  client.py  model_views.py  models.py  processing.py  serializers.py  tasks.py  utils.py
backend/swoops/: apps.py  asgi.py  celery.py  serializers.py  settings.py  tokens.py  urls.py  utils.py  wsgi.py
backend/utils/: db.py  helpers.py
(+771 files in other folders)
